css/main.css
@import url("font-awesome.min.css");
@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600,600italic,700,700italic");
.header {
  z-index: 99;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  padding: 18px 0; }
  .header__container {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center; }
  .header__logo {
    position: relative;
    display: inline-block;
    z-index: 1;
    color: white;
    border-bottom: none; }
    .header__logo img {
      height: 25px; }
  .header__nav {
    transition: right .2s ease-out;
    width: 650px;
    margin: auto; }
  .header__nav-list {
    display: flex;
    flex-direction: row;
    flex-flow: wrap;
    justify-content: center;
    margin-bottom: 0; }
  .header__nav-item {
    color: #ffffff;
    font-size: 16px;
    text-transform: uppercase;
    letter-spacing: 3px;
    font-weight: 600;
    min-width: 160px; }
    .header__nav-item:hover {
      color: rgba(255, 255, 255, 0.75); }
    .header__nav-item a {
      padding: 10px 10px 6px 10px;
      border-bottom: none;
      color: white; }

/*
	Directive by HTML5 UP
	html5up.net | @ajlkn
	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
*/
html, body, div, span, applet, object,
iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
pre, a, abbr, acronym, address, big, cite,
code, del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var, b,
u, i, center, dl, dt, dd, ol, ul, li, fieldset,
form, label, legend, table, caption, tbody,
tfoot, thead, tr, th, td, article, aside,
canvas, details, embed, figure, figcaption,
footer, header, hgroup, menu, nav, output, ruby,
section, summary, time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline; }

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block; }

body {
  line-height: 1; }

ol, ul {
  list-style: none; }

blockquote, q {
  quotes: none; }
  blockquote:before, blockquote:after, q:before, q:after {
    content: '';
    content: none; }

table {
  border-collapse: collapse;
  border-spacing: 0; }

body {
  -webkit-text-size-adjust: none; }

mark {
  background-color: transparent;
  color: inherit; }

input::-moz-focus-inner {
  border: 0;
  padding: 0; }

input, select, textarea {
  -moz-appearance: none;
  -webkit-appearance: none;
  -ms-appearance: none;
  appearance: none; }

/* Basic */
html {
  box-sizing: border-box; }

*, *:before, *:after {
  box-sizing: inherit; }

html, body {
  height: 100%; }

body {
  background: #ffffff; }
  body.is-preload *, body.is-preload *:before, body.is-preload *:after {
    -moz-animation: none !important;
    -webkit-animation: none !important;
    -ms-animation: none !important;
    animation: none !important;
    -moz-transition: none !important;
    -webkit-transition: none !important;
    -ms-transition: none !important;
    transition: none !important; }

body, input, select, textarea {
  color: #6e6e6e;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 16pt;
  font-weight: 400;
  line-height: 1.75em; }

a {
  -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
  -webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
  -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
  transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
  border-bottom: dotted 1px;
  color: #4eb980;
  text-decoration: none; }
  a:hover {
    border-bottom-color: transparent; }

strong, b {
  font-weight: 600;
  color: #5b5b5b; }

em, i {
  font-style: italic; }

p, ul, ol, dl, table, blockquote, form {
  margin: 0 0 1em 0; }

h1, h2, h3, h4, h5, h6 {
  color: #5b5b5b;
  font-weight: 700;
  letter-spacing: 0.125em;
  line-height: 1.75em;
  margin-bottom: 1em;
  text-transform: uppercase;
  text-align: center; }
  h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
    color: inherit;
    text-decoration: none; }

h2 {
  font-size: 1.75em; }

h3 {
  font-size: 1.5em; }

sub {
  font-size: 0.8em;
  position: relative;
  top: 0.5em; }

sup {
  font-size: 0.8em;
  position: relative;
  top: -0.5em; }

hr {
  border: 0;
  border-top: solid 1px rgba(224, 224, 224, 0.75);
  margin-bottom: 1.5em; }

blockquote {
  border-left: solid 0.5em rgba(224, 224, 224, 0.75);
  font-style: italic;
  padding: 1em 0 1em 2em; }

/* Smooth Scroll across the document */
html {
  scroll-behavior: smooth; }

/* Container */
.container {
  margin: 0 auto;
  max-width: 100%;
  width: 51em; }
  .container.medium {
    width: 38.25em; }
  @media screen and (max-width: 1280px) {
    .container {
      width: 48em; }
      .container.medium {
        width: 36em; } }
  @media screen and (max-width: 980px) {
    .container {
      width: 95%; }
      .container.medium {
        width: 71.25%; } }
  @media screen and (max-width: 840px) {
    .container {
      width: 95% !important; } }
  @media screen and (max-width: 736px) {
    .container {
      width: 90% !important; } }
  @media screen and (max-width: 480px) {
    .container {
      width: 100% !important; } }

/* Row */
.row {
  display: flex;
  flex-wrap: wrap;
  box-sizing: border-box;
  align-items: stretch; }
  .row > * {
    box-sizing: border-box; }
  .row.gtr-uniform > * > :last-child {
    margin-bottom: 0; }
  .row.aln-left {
    justify-content: flex-start; }
  .row.aln-center {
    justify-content: center; }
  .row.aln-right {
    justify-content: flex-end; }
  .row.aln-top {
    align-items: flex-start; }
  .row.aln-middle {
    align-items: center; }
  .row.aln-bottom {
    align-items: flex-end; }
  .row > .imp {
    order: -1; }
  .row > .col-1 {
    width: 8.33333%; }
  .row > .off-1 {
    margin-left: 8.33333%; }
  .row > .col-2 {
    width: 16.66667%; }
  .row > .off-2 {
    margin-left: 16.66667%; }
/* ... */

